// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableSelectionMenu component should render TableSelectionMenu closed menu 1`] = `
<React.Fragment>
  <ForwardRef(Menu)
    anchorEl={null}
    anchorOrigin={
      {
        "horizontal": "right",
        "vertical": "top",
      }
    }
    anchorReference="anchorEl"
    elevation={1}
    onClose={[MockFunction]}
    open={false}
  />
</React.Fragment>
`;

exports[`TableSelectionMenu component should render TableSelectionMenu opened menu 1`] = `
<React.Fragment>
  <ForwardRef(Menu)
    anchorEl={null}
    anchorOrigin={
      {
        "horizontal": "right",
        "vertical": "top",
      }
    }
    anchorReference="anchorEl"
    elevation={1}
    onClose={[MockFunction]}
    open={true}
  />
</React.Fragment>
`;

exports[`TableSelectionMenu component should render TableSelectionMenu opened menu with actions 1`] = `
<React.Fragment>
  <ForwardRef(Menu)
    anchorEl={null}
    anchorOrigin={
      {
        "horizontal": "right",
        "vertical": "top",
      }
    }
    anchorReference="anchorEl"
    elevation={1}
    onClose={[MockFunction]}
    open={true}
  >
    <menuItem
      onClick={[Function]}
      selectedCells={
        {
          "1": [
            0,
            1,
            2,
          ],
          "2": [
            0,
            1,
            2,
          ],
        }
      }
    >
      Foo item
    </menuItem>
    <DefaultMenuItem
      onClick={[Function]}
      selectedCells={
        {
          "1": [
            0,
            1,
            2,
          ],
          "2": [
            0,
            1,
            2,
          ],
        }
      }
    >
      Bar item
    </DefaultMenuItem>
  </ForwardRef(Menu)>
</React.Fragment>
`;
